<resources>
    <string name="app_name">LAB_WEEK_03</string>

    <!-- Affogato -->
    <string name="affogato_title">AFFOGATO</string>
    <string name="affogato_desc">Espresso poured on a vanilla ice cream. Served in a cappuccino cup.</string>

    <!-- Americano -->
    <string name="americano_title">AMERICANO</string>
    <string name="americano_desc">Espresso with added hot water (100–150 ml). Often served in a cappuccino cup. The espresso is added into the hot water rather than all the water being flowed through the coffee that would lead to over extraction.</string>

    <!-- Caffe Latte -->
    <string name="latte_title">CAFFE LATTE</string>
    <string name="latte_desc">A tall, mild \'milk coffee\' (about 150–300 ml). An espresso with steamed milk and only a little milk foam poured over it. Serve in a latte glass or a coffee cup. Flavored syrup can be added.</string>

    <!-- Espresso -->
    <string name="espresso_title">ESPRESSO</string>
    <string name="espresso_desc">A strong and rich coffee brewed by forcing a small amount of nearly boiling water through finely ground coffee beans. Usually served in a small cup (30 ml).</string>

    <!-- Cappuccino -->
    <string name="cappuccino_title">CAPPUCCINO</string>
    <string name="cappuccino_desc">A popular Italian coffee made with equal parts espresso, steamed milk, and milk foam. Traditionally served in a cappuccino cup.</string>

    <!-- General -->
    <string name="coffee_list">Coffee List</string>
</resources>
