<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/coffee_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coffee_list"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:gravity="center"
        android:textColor="@color/purple_500"/>

    <!-- Daftar kopi -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/affogato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/affogato_title"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/americano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/americano_title"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/espresso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espresso_title"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/cappuccino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cappuccino_title"
            android:textSize="16sp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/latte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latte_title"
            android:textSize="16sp"
            android:padding="8dp"/>

    </LinearLayout>

</LinearLayout>
